<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha" />

    <Button
        android:id="@+id/btn_rotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate" />

    <Button
        android:id="@+id/btn_translationX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha" />

    <Button
        android:id="@+id/btn_scaleY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale" />

    <Button
        android:id="@+id/btn_advance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object" />

    <Button
        android:id="@+id/btn_Interpolator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interpolator" />

    <Button
        android:id="@+id/btn_ViewPropertyAnimator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ViewPropertyAnimator" />
</LinearLayout>