<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:orientation="vertical"
    tools:context="com.yishu.animation.activity.MainActivity">

    <Button
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_animation" />

    <Button
        android:id="@+id/property_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_animation_value" />

    <Button
        android:id="@+id/property_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_animation_object" />

    <Button
        android:id="@+id/property_animationSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_animationSet" />
</LinearLayout>
